# chukzbook_AI

./: .gitignore  README.md  postman.json  pyproject.toml  requirements.txt
ai_chatbot/: asgi.py  settings.py  urls.py  wsgi.py
book_idea/: apps.py  models.py  serializers.py  spec_constants.py  throttles.py  urls.py  views.py
book_idea/migrations/: 0001_initial.py
book_idea/services/: ai_engine.py  market_data.py  notifications.py  validator.py
chatbot/: serializers.py  system_prompt.py  tools.py  urls.py  views.py
chatbot/migrations/: 0001_initial.py  0002_usersession.py  0003_delete_chatmessage_delete_usersession.py
core/: settings.py  urls.py
postman/: BookIdeaCheck.postman_collection.json
