[project]
name = "chukzbook-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.15",
    "djangorestframework>=3.17.1",
    "fpdf2>=2.8.7",
    "google-search-results>=2.4.2",
    "langchain>=1.3.4",
    "langchain-anthropic>=1.4.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-deepseek>=1.1.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
